--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
   </head>
   <body>
     <a href="/pages/ascii.html" class=""> ascii</a>
+    <a href="/pages/rotation.html" class=""> rotation</a>
+    <a href="/pages/spheres.html" class=""> spheres</a>
   </body>
 </html>
